Hotfix for TBS Affix flicker issue

--- a/less/style.less
+++ b/less/style.less
@@ -156,8 +156,13 @@ p {
 //    margin-top: -9px;
 //}
 
-#topnavbar.affix {
-    position: fixed !important;
+//#topnavbar.affix {
+//    position: fixed !important;
+//    top: 0;
+//    width: 100%;
+//}
+
+.affix {
     top: 0;
     width: 100%;
 }
@@ -428,7 +433,7 @@ p {
 //START MAIN SECTION
 
 .main-wrapper {
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 
 //END MAIN SECTION
